RESOLVED FIXED296964
[ iOS Release, macOS wk2 ] imported/w3c/web-platform-tests/webrtc/RTCDataChannel-GC.html is a flakey text failure
https://bugs.webkit.org/show_bug.cgi?id=296964
Summary [ iOS Release, macOS wk2 ] imported/w3c/web-platform-tests/webrtc/RTCDataChan...
Bryan Medina
Reported 2025-08-05 14:27:28 PDT
imported/w3c/web-platform-tests/webrtc/RTCDataChannel-GC.html is a flakey text failure occurring on iOS Release and macOS wk2. HISTORY: https://results.webkit.org/?suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Fwebrtc%2FRTCDataChannel-GC.html TEXT DIFF: --- /Volumes/Data/worker/iOS-18-Simulator-WPT-WK2-Tests-EWS/build/layout-test-results/imported/w3c/web-platform-tests/webrtc/RTCDataChannel-GC-expected.txt +++ /Volumes/Data/worker/iOS-18-Simulator-WPT-WK2-Tests-EWS/build/layout-test-results/imported/w3c/web-platform-tests/webrtc/RTCDataChannel-GC-actual.txt @@ -1,4 +1,4 @@ -PASS Control: detected remote PC being closed using a data channel +FAIL Control: detected remote PC being closed using a data channel assert_true: expected true got false PASS While remote PC remains open, its datachannel should not be collected TEXT DIFF URL: https://ews-build.s3-us-west-2.amazonaws.com/iOS-18-Simulator-WPT-WK2-Tests-EWS/3e15969c-27157-clean-tree/imported/w3c/web-platform-tests/webrtc/RTCDataChannel-GC-diff.txt
Attachments
Radar WebKit Bug Importer
Comment 1 2025-08-05 14:28:23 PDT
Bryan Medina
Comment 2 2025-08-05 14:33:36 PDT
I was able to reproduce the text failure locally on my device running macOS Sequoia arm64 Release ToT using the following command: run-webkit-tests imported/w3c/web-platform-tests/webrtc/RTCDataChannel-GC.html --iterations=25 -f
EWS
Comment 3 2025-08-05 15:18:16 PDT
Test gardening commit 298263@main (e9c177a0bc58): <https://commits.webkit.org/298263@main> Reviewed commits have been landed. Closing PR #48980 and removing active labels.
youenn fablet
Comment 4 2026-02-16 09:07:11 PST
EWS
Comment 5 2026-02-18 09:54:56 PST
Committed 307766@main (53105a3475c6): <https://commits.webkit.org/307766@main> Reviewed commits have been landed. Closing PR #58791 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.