[ iOS Release, macOS wk2 ] imported/w3c/web-platform-tests/webrtc/RTCDataChannel-GC.html  is a flakey text failure rdar://157599607 https://bugs.webkit.org/show_bug.cgi?id=296964

Reviewed by Eric Carlson.

The test is flaky due to a race between cancelling nw connections and sending the last packets of the nw connections.
In the test case, the packet telling that the SCTP connection is tearing down would not always be sent.
It would not be received, thus not triggering the close event on the other peer data channel.

We fix this by delaying the nw_connection_cancel call until the nw_connection has finished sending UDP packets.
This requires the send callback to ref the nw connection and its tracker.
We add a count of pending send in the tracker.
And we only call nw_connection_cancel when the pending send count is zero, either when closing the socket or as part of the last send callback of the nw connection.

Covered by test no longer being flaky.

Canonical link: https://commits.webkit.org/307766@main